Refactor names
Рефакторинг имен классов для соответствия их назначению, а так же для предотвращения конфликтов имен в импортах
