# src/main/java/ru/skypro/homework/controller/user/UserController.java
@@ -6,10 +6,8 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
@@ -22,10 +20,9 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
-
 import ru.skypro.homework.dto.auth.Role;
-import ru.skypro.homework.dto.user.NewPassword;
-import ru.skypro.homework.dto.user.UpdateUser;
+import ru.skypro.homework.dto.user.NewPasswordDto;
+import ru.skypro.homework.dto.user.UpdateUserDto;
 import ru.skypro.homework.dto.user.UserDto;
 
 import javax.validation.Valid;
@@ -62,7 +59,7 @@ public class UserController {
             })
     @PostMapping("/set_password")
     public ResponseEntity<Void> setPassword(
-            @Valid @RequestBody NewPassword newPassword, Authentication authentication) {
+            @Valid @RequestBody NewPasswordDto newPasswordDto, Authentication authentication) {
 
         log.info("Запрос на смену пароля");
 
@@ -116,7 +113,7 @@ public class UserController {
                         content =
                                 @Content(
                                         mediaType = "application/json",
-                                        schema = @Schema(implementation = UpdateUser.class))),
+                                        schema = @Schema(implementation = UpdateUserDto.class))),
                 @ApiResponse(
                         responseCode = "400",
                         description = "Некорректные данные запроса",
@@ -127,13 +124,13 @@ public class UserController {
                         content = @Content(schema = @Schema(hidden = true)))
             })
     @PatchMapping("/me")
-    public ResponseEntity<UpdateUser> updateUser(
-            @Valid @RequestBody UpdateUser updateUser, Authentication authentication) {
+    public ResponseEntity<UpdateUserDto> updateUser(
+            @Valid @RequestBody UpdateUserDto updateUserDto, Authentication authentication) {
 
         log.info("Запрос на обновление данных пользователя");
 
         // Заглушка - возвращаем тот же DTO, который получили
-        return ResponseEntity.ok(updateUser);
+        return ResponseEntity.ok(updateUserDto);
     }
 
     @Operation(
