# src/main/java/ru/skypro/homework/dto/ad/ExtendedAdDto.java
@@ -1,12 +1,11 @@
 package ru.skypro.homework.dto.ad;
 
 import io.swagger.v3.oas.annotations.media.Schema;
-
 import lombok.Data;
 
 @Data
 @Schema(description = "Расширенная информация об объявлении")
-public class ExtendedAd {
+public class ExtendedAdDto {
 
     @Schema(description = "ID объявления", example = "1")
     private Integer pk;
